syntax = "proto3";

package todo;

service TodoService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc List(ListRequest) returns (ListResponse);
}

message CreateRequest {
  string title = 1;
  string description = 2;
}

message CreateResponse {
  string id = 1;
}

message ReadRequest {
  string id = 1;
}

message ReadResponse {
  string id = 1;
  string title = 2;
  string description = 3;
}

message UpdateRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message UpdateResponse {
  string id = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  bool status = 1;
}

message ListRequest {}

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
}

message ListResponse {
  repeated Todo todos = 1;
}